--- a/GeekDb/GeekDb/GeekDb.vcxproj
+++ b/GeekDb/GeekDb/GeekDb.vcxproj
@@ -152,6 +152,8 @@
     <ClInclude Include="GeekMapDb.h" />
     <ClInclude Include="GeekSequenceDb.h" />
     <ClInclude Include="GeekUtils.h" />
+    <ClInclude Include="ILogger.h" />
+    <ClInclude Include="Observer.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
