--- a/GeekDb/GeekDb/GeekDb.vcxproj.filters
+++ b/GeekDb/GeekDb/GeekDb.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClInclude Include="Observer.h">
       <Filter>Header Files\Common</Filter>
     </ClInclude>
+    <ClInclude Include="FileLogger.h">
+      <Filter>Header Files\Loggers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -81,6 +84,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="GeekMapDb.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FileLogger.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
