--- a/GeekDb/GeekDb/GeekDb.vcxproj
+++ b/GeekDb/GeekDb/GeekDb.vcxproj
@@ -144,6 +144,9 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Commands.h" />
+    <ClInclude Include="CommandSystem.h" />
+    <ClInclude Include="CreateDatabaseCommand.h" />
     <ClInclude Include="FileLogger.h" />
     <ClInclude Include="GeekDb.h" />
     <ClInclude Include="GeekDbStorage.h" />
@@ -153,12 +156,15 @@
     <ClInclude Include="GeekMapDb.h" />
     <ClInclude Include="GeekSequenceDb.h" />
     <ClInclude Include="GeekUtils.h" />
+    <ClInclude Include="ICommand.h" />
+    <ClInclude Include="IGeekDbCommand.h" />
     <ClInclude Include="ILogger.h" />
     <ClInclude Include="Observer.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CommandSystem.cpp" />
     <ClCompile Include="FileLogger.cpp" />
     <ClCompile Include="GeekDbStorage.cpp" />
     <ClCompile Include="GeekDbManager.cpp" />
