--- a/GeekDb/GeekDb/GeekDb.vcxproj
+++ b/GeekDb/GeekDb/GeekDb.vcxproj
@@ -147,6 +147,10 @@
     <ClInclude Include="Commands.h" />
     <ClInclude Include="CommandSystem.h" />
     <ClInclude Include="CreateDatabaseCommand.h" />
+    <ClInclude Include="CreateDataCommand.h" />
+    <ClInclude Include="DeleteDatabaseCommand.h" />
+    <ClInclude Include="DeleteDataCommand.h" />
+    <ClInclude Include="DumpDatabaseCommand.h" />
     <ClInclude Include="FileLogger.h" />
     <ClInclude Include="GeekDb.h" />
     <ClInclude Include="GeekDbStorage.h" />
@@ -159,7 +163,11 @@
     <ClInclude Include="ICommand.h" />
     <ClInclude Include="IGeekDbCommand.h" />
     <ClInclude Include="ILogger.h" />
+    <ClInclude Include="ListDatabaseCommand.h" />
+    <ClInclude Include="LoadDatabaseCommand.h" />
+    <ClInclude Include="ModifyDataCommand.h" />
     <ClInclude Include="Observer.h" />
+    <ClInclude Include="QueryDataCommand.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
