--- a/GeekDb/GeekDb/GeekDb.vcxproj
+++ b/GeekDb/GeekDb/GeekDb.vcxproj
@@ -167,9 +167,11 @@
     <ClInclude Include="LoadDatabaseCommand.h" />
     <ClInclude Include="ModifyDataCommand.h" />
     <ClInclude Include="Observer.h" />
+    <ClInclude Include="OrderDatabase.h" />
     <ClInclude Include="QueryDataCommand.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="UnOrderDatabase.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CommandSystem.cpp" />
